--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="articulo" >
-    <h1>article on jan 25, 2023</h1>
+    <h1><span>article</span> on jan 25, 2023</h1>
     <br>
     <br>
     <h2>animating css 
@@ -20,7 +20,7 @@
        <br>
        <img src="logo letra d.png"  >
        <br>
-       <h4>d daniel schwarz</h4>
+       <h4> daniel schwarz</h4>
        
 </div>
 
