--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="articulo" >
+<div class="articulo" >
     <h1><span>article</span> on jan 25, 2023</h1>
     <br>
     <br>
